// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardNumberInput should render all but the detected card scheme with reduced opacity 1`] = `
Array [
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
    className="circuit-0 circuit-1"
  >
    Supported card schemes: mastercard, visa, diners, jcb.
  </div>,
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
    aria-live="polite"
    className="circuit-0 circuit-1"
  >
    Detected scheme: visa
  </div>,
  .circuit-0 {
  font-size: 13px;
  line-height: 20px;
  margin-bottom: 4px;
  display: block;
}

<label
    className="circuit-0 circuit-1"
    htmlFor="cui-cc-card-number"
  >
    Card number
  </label>,
  .circuit-14 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-12 {
  bottom: 100%;
  display: block;
  list-style: none;
  position: absolute;
  overflow-x: auto;
  right: 0;
  text-align: right;
  white-space: nowrap;
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
}

@media (min-width:451px) {
  .circuit-12 {
    right: 0;
    width: auto;
    text-align: right;
  }
}

.circuit-6 {
  display: inline-block;
}

.circuit-6:not(:last-of-type) {
  margin-right: 4px;
}

.circuit-6 > svg {
  width: auto;
  height: 16px;
}

.circuit-4 {
  display: inline-block;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  opacity: 0.2;
}

.circuit-4:not(:last-of-type) {
  margin-right: 4px;
}

.circuit-4 > svg {
  width: auto;
  height: 16px;
}

<div
    className="circuit-14 circuit-15"
    disabled={false}
  >
    <input
      aria-invalid={false}
      autoComplete="cc-number"
      className="circuit-0 circuit-1"
      disabled={false}
      id="cui-cc-card-number"
      name="creditCardInput"
      onChange={[Function]}
      placeholder="•••• •••• •••• ••••"
      required={false}
      type="tel"
      value="4485 7197 7461 1397"
    />
    <div
      className="circuit-2 circuit-3"
    />
    <ul
      aria-hidden="true"
      className="circuit-12 circuit-13"
    >
      <li
        className="circuit-4 circuit-5"
        disabled={true}
      >
        <div>
          mastercard.svg
        </div>
      </li>
      <li
        className="circuit-6 circuit-5"
        disabled={false}
      >
        <div>
          visa.svg
        </div>
      </li>
      <li
        className="circuit-4 circuit-5"
        disabled={true}
      >
        <div>
          diners.svg
        </div>
      </li>
      <li
        className="circuit-4 circuit-5"
        disabled={true}
      >
        <div>
          jcb.svg
        </div>
      </li>
    </ul>
  </div>,
]
`;

exports[`CardNumberInput should render with default styles 1`] = `
Array [
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
    className="circuit-0 circuit-1"
  >
    Supported card schemes: mastercard, visa, diners, jcb.
  </div>,
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
    aria-live="polite"
    className="circuit-0 circuit-1"
  >
    Detected scheme: visa
  </div>,
  .circuit-0 {
  font-size: 13px;
  line-height: 20px;
  margin-bottom: 4px;
  display: block;
}

<label
    className="circuit-0 circuit-1"
    htmlFor="cui-cc-card-number"
  >
    Card number
  </label>,
  .circuit-14 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-12 {
  bottom: 100%;
  display: block;
  list-style: none;
  position: absolute;
  overflow-x: auto;
  right: 0;
  text-align: right;
  white-space: nowrap;
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
}

@media (min-width:451px) {
  .circuit-12 {
    right: 0;
    width: auto;
    text-align: right;
  }
}

.circuit-4 {
  display: inline-block;
}

.circuit-4:not(:last-of-type) {
  margin-right: 4px;
}

.circuit-4 > svg {
  width: auto;
  height: 16px;
}

<div
    className="circuit-14 circuit-15"
    disabled={false}
  >
    <input
      aria-invalid={false}
      autoComplete="cc-number"
      className="circuit-0 circuit-1"
      disabled={false}
      id="cui-cc-card-number"
      name="creditCardInput"
      onChange={[Function]}
      placeholder="•••• •••• •••• ••••"
      required={false}
      type="tel"
      value=""
    />
    <div
      className="circuit-2 circuit-3"
    />
    <ul
      aria-hidden="true"
      className="circuit-12 circuit-13"
    >
      <li
        className="circuit-4 circuit-5"
        disabled=""
      >
        <div>
          mastercard.svg
        </div>
      </li>
      <li
        className="circuit-4 circuit-5"
        disabled=""
      >
        <div>
          visa.svg
        </div>
      </li>
      <li
        className="circuit-4 circuit-5"
        disabled=""
      >
        <div>
          diners.svg
        </div>
      </li>
      <li
        className="circuit-4 circuit-5"
        disabled=""
      >
        <div>
          jcb.svg
        </div>
      </li>
    </ul>
  </div>,
]
`;

exports[`CardNumberInput should render with styles for more than 5 card schemes 1`] = `
Array [
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
    className="circuit-0 circuit-1"
  >
    Supported card schemes: mastercard, visa, diners, discover, jcb, elo, maestro.
  </div>,
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
    aria-live="polite"
    className="circuit-0 circuit-1"
  >
    
  </div>,
  .circuit-0 {
  font-size: 13px;
  line-height: 20px;
  margin-bottom: 4px;
  display: block;
}

<label
    className="circuit-0 circuit-1"
    htmlFor="cui-cc-card-number"
  >
    Card number
  </label>,
  .circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 200ms ease-in-out;
  transition: border-color 200ms ease-in-out;
  width: 100%;
  font-size: 15px;
  line-height: 24px;
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-0::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-2 {
  opacity: 0;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  position: absolute;
  top: 1px;
  right: 1px;
  height: 16px;
  width: 16px;
  margin: 12px;
  pointer-events: none;
}

.circuit-4 {
  display: inline-block;
}

.circuit-4:not(:last-of-type) {
  margin-right: 4px;
}

.circuit-4 > svg {
  width: auto;
  height: 16px;
}

.circuit-20 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

@media (max-width:450px) {
  .circuit-20 {
    margin-bottom: 32px;
    margin-bottom: calc(32px + 4px);
  }
}

.circuit-18 {
  bottom: 100%;
  display: block;
  list-style: none;
  position: absolute;
  overflow-x: auto;
  right: 0;
  text-align: right;
  white-space: nowrap;
  opacity: 1;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
}

@media (min-width:451px) {
  .circuit-18 {
    right: 0;
    width: auto;
    text-align: right;
  }
}

@media (max-width:450px) {
  .circuit-18 {
    top: -75%;
    top: calc(100% + 4px);
    bottom: initial;
    left: 0;
    width: 100%;
    text-align: left;
  }
}

<div
    className="circuit-20 circuit-21"
    disabled={false}
  >
    <input
      aria-invalid={false}
      autoComplete="cc-number"
      className="circuit-0 circuit-1"
      disabled={false}
      id="cui-cc-card-number"
      name="creditCardInput"
      onChange={[Function]}
      placeholder="•••• •••• •••• ••••"
      required={false}
      type="tel"
      value=""
    />
    <div
      className="circuit-2 circuit-3"
    />
    <ul
      aria-hidden="true"
      className="circuit-18 circuit-19"
    >
      <li
        className="circuit-4 circuit-5"
        disabled=""
      >
        <div>
          mastercard.svg
        </div>
      </li>
      <li
        className="circuit-4 circuit-5"
        disabled=""
      >
        <div>
          visa.svg
        </div>
      </li>
      <li
        className="circuit-4 circuit-5"
        disabled=""
      >
        <div>
          diners.svg
        </div>
      </li>
      <li
        className="circuit-4 circuit-5"
        disabled=""
      >
        <div>
          discover.svg
        </div>
      </li>
      <li
        className="circuit-4 circuit-5"
        disabled=""
      >
        <div>
          jcb.svg
        </div>
      </li>
      <li
        className="circuit-4 circuit-5"
        disabled=""
      >
        <div>
          elo.svg
        </div>
      </li>
      <li
        className="circuit-4 circuit-5"
        disabled=""
      >
        <div>
          maestro.svg
        </div>
      </li>
    </ul>
  </div>,
]
`;
